[package]
name = "banner"
version = "0.1.0"
authors = ["Stuart Thompson <stuart@stuartthompson.net>"]
edition = "2018"
description = "Writes banners (title panels and headers) to the console to help make console output prettier."
documentation = ""
readme = "README.md"
homepage = "https://github.com/stuartthompson/rust-banner"
repository = "https://github.com/stuartthompson/rust-banner"
license = "GPL-3.0-or-later"
keywords = ["terminal", "cli", "header", "title", "console", "banners"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "development-tools::debugging", "config"]

[dependencies]
