[package]
name = "banner"
version = "0.0.2"
authors = ["Stuart Thompson <stuart@stuartthompson.net>"]
edition = "2018"
description = "Formats banners (text panels and headers) to help make console and log file output prettier."
documentation = "https://github.com/stuartthompson/banner/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/stuartthompson/banner"
repository = "https://github.com/stuartthompson/banner"
license = "GPL-3.0-or-later"
keywords = ["terminal", "text", "format", "cli", "console"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "development-tools::debugging"]

[dependencies]
colored = "1.9"

[lib]
name = "banner"
path = "src/lib.rs"